--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@fastify/auth": "^3.0.2",
+    "@fastify/compress": "^6.2.0",
     "@fastify/cors": "^8.1.0",
     "@fastify/static": "5.0.0",
     "@fastify/swagger": "^7.4.1",
